welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:52: error: Unmatched closing brace '}' ignored here
}
^